...
                        Button {
                            showScratchScreen = true
                        } label: {
                            Text("scratch_card").titleButtonStyle()
                        }
                        .defaultButtonStyle()
                        .accessibilityIdentifier("scratch_button")
                        .navigationDestination(
                            isPresented: $showScratchScreen) {
                                ScratchView()
                            }

                    Button {
                        showActivationScreen = true
                    } label: {
                        Text("activate_card").titleButtonStyle()
                    }
                    .defaultButtonStyle()
                    .accessibilityIdentifier("activate_button")
                    .navigationDestination(
                        isPresented: $showActivationScreen) {
                            ActivationView()
                        }
                }
                .padding(.leading, 20)
...
