...
    "card_activated" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Activated"
          }
        }
      }
    },
    "OK" : {

...
    "scratching_finished" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Scratching finished"
          }
        }
      }
    },
    "status_activated" : {
      "extractionState" : "manual",
...
