...
                buttonHandler()
            } label: {
                Text(buttonString).titleButtonStyle()
            }
            .allowsHitTesting(screenState == .unscratched)
            .defaultButtonStyle()
            .accessibilityIdentifier("scratch_screen_button")
            Spacer()
            LoaderView()
                .opacity(screenState == .scratching ? 1 : 0)
            Spacer()
        }
        .frame(maxWidth: .infinity, maxHeight: .infinity)
...
