...
                buttonHandler()
            } label: {
                Text(buttonString).titleButtonStyle()
            }
            .allowsHitTesting(screenState == .ready)
            .defaultButtonStyle()
            .accessibilityIdentifier("activate_screen_button")
            .opacity(screenState == .unscratched ? 0 : 1)
            Spacer()
            LoaderView()
                .opacity(screenState == .activating ? 1 : 0)
            Spacer()
        }
...
